--- a/Automatic_TikTok_Video_Quality_Analysis_Tool.ipynb
+++ b/Automatic_TikTok_Video_Quality_Analysis_Tool.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMfi93tRQm5VWMPQ8A8jvlT",
+      "authorship_tag": "ABX9TyNhOGsR6224yFoK+CwOF/eM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -434,26 +434,8 @@
         "    prompt = f\"\"\"\n",
         "    Given the brand reference video description: \"{ref_transcript}\"\n",
         "    And the uploaded video description: \"{user_transcript}\"\n",
-        "    Rate the uploaded video's quality from 0 to 100 based on tone, clarity, and brand consistency using the reference video provided as the ideal tone/manner.\n",
-        "    Use this rubric to help you rate the video:\n",
-        "\n",
-        "    VISUAL TONE & STYLE (30 pts total)\n",
-        "    - Brightness / Contrast: Is the lighting consistent and well-balanced? Avoid too dark or too bright footage.\n",
-        "    - Framing / Close-Ups: Is the subject centered and framed well? Are product shots clear and close when needed?\n",
-        "\n",
-        "    AUDITORY TONE (25 pts total)\n",
-        "    - Voice Energy / Clarity: Is the voice confident, expressive, and clear? Is it similar in energy to the reference?\n",
-        "\n",
-        "    BRAND MESSAGE CONSISTENCY (25 pts total)\n",
-        "    - Brand/Product Mentions: Are brand names or product phrases mentioned like in the reference?\n",
-        "    - Product Emphasis : Is the product clearly shown and emphasized, as in the reference video?\n",
-        "\n",
-        "    CONTENT ALIGNMENT (20 pts total)\n",
-        "    - Message Clarity: Is the video’s message easy to understand and coherent?\n",
-        "    - Tone Relevance: Does the style and feel match the brand's tone from the reference video?\n",
-        "\n",
-        "    Make a list of points for feedback (e.g., “Lighting too dark”, “Brand name not mentioned”).\n",
-        "    Then make recommendations for whether the video passes (70+ quality score), needs to be re-shot, or needs manual review.\n",
+        "    Rate the uploaded video's quality from 0 to 100 based on tone, clarity, and brand consistency\n",
+        "    using the reference video provided as the ideal tone/manner.\n",
         "    \"\"\"\n",
         "\n",
         "    response = gemini_model.generate_content([\n",
@@ -467,7 +449,7 @@
       "metadata": {
         "id": "epdHUAUiN2He"
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": []
     },
     {
@@ -495,7 +477,7 @@
       "metadata": {
         "id": "YbhK5UtiwOuf"
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -512,9 +494,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaU7_XFwN3O2",
-        "outputId": "44cc1ae9-252c-46b6-c353-d3ee31e18aff"
+        "outputId": "5cc2e235-163a-466e-8524-4aa9b93db8d1"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -540,33 +522,27 @@
             "Calling Gemini for Analysis\n",
             "\n",
             "=== Quality Evaluation Result ===\n",
-            "Okay, I can evaluate the uploaded video and provide a quality score, feedback, and recommendations.\n",
+            "Okay, I can analyze the video based on tone, clarity, and brand consistency and compare it to the reference video to provide a quality score.\n",
             "\n",
-            "**Overall Quality Score:** 85/100\n",
+            "**Analysis:**\n",
             "\n",
-            "Here's the breakdown based on the rubric:\n",
+            "*   **Tone:** Both videos share an enthusiastic and friendly tone. The uploaded video demonstrates strong enthusiasm for the product.\n",
             "\n",
-            "*   **VISUAL TONE & STYLE (27/30):**\n",
-            "    *   The brightness and contrast are balanced; the video is not too dark or bright.\n",
-            "    *   Framing is generally good; the subject is centered well. Close-ups of the product are clear.\n",
-            "*   **AUDITORY TONE (23/25):**\n",
-            "    *   Voice is relatively clear and confident.\n",
-            "*   **BRAND MESSAGE CONSISTENCY (20/25):**\n",
-            "    *   The brand and product name are mentioned several times, similar to the reference.\n",
-            "    *   The product is clearly shown, and its features are emphasized.\n",
-            "*   **CONTENT ALIGNMENT (15/20):**\n",
-            "    *   The message is easy to understand and coherent.\n",
-            "    *   The video's tone and style generally align with the brand's tone in the reference video.\n",
+            "*   **Clarity:** Both videos provide clear information about the sunscreen, highlighting key features such as SPF level, non-sticky texture, and lack of white cast.\n",
             "\n",
-            "**Points for Feedback:**\n",
+            "*   **Brand Consistency:** The uploaded video is generally consistent with the brand's message, emphasizing FDA approval and Amazon availability. However, it does add more personal anecdotes about surfing.\n",
             "\n",
-            "*   (Minor) The woman speaks clearly but with the occasional filler words.\n",
+            "**Quality Score:**\n",
             "\n",
-            "**Recommendations:**\n",
+            "Considering the above factors, I would rate the uploaded video as an **85/100**.\n",
             "\n",
-            "*   The video **passes** the quality assessment. It is well-made and aligns with the brand's message and tone. The uploaded video effectively showcases the product, highlights its key features, and is delivered in a clear, engaging manner. No reshoot is necessary.\n",
+            "**Justification:**\n",
             "\n",
-            "\n"
+            "*   The video effectively communicates the key features of the sunscreen and aligns with the brand's messaging.\n",
+            "*   The personal anecdotes might add relatability for some viewers. However, since the reference video does not make use of anecdotes, this video's quality score is slightly decreased.\n",
+            "*   There are some minor areas for improvement regarding clarity and consistency, such as streamlining the presentation to focus more on the key selling points and aligning with the tone of the reference video.\n",
+            "\n",
+            "Overall, the video is well-executed and would likely be effective in promoting the sunscreen.\n"
           ]
         }
       ]
