--- a/Automatic_TikTok_Video_Quality_Analysis_Tool.ipynb
+++ b/Automatic_TikTok_Video_Quality_Analysis_Tool.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhOGsR6224yFoK+CwOF/eM",
+      "authorship_tag": "ABX9TyM9P0vox1VSygaMP15x6ktO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,8 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tYooVsm8Ncqa",
-        "outputId": "89045a6b-bdf8-44cf-be0a-36b1360d5050"
+        "outputId": "89045a6b-bdf8-44cf-be0a-36b1360d5050",
+        "collapsed": true
       },
       "outputs": [
         {
@@ -483,7 +484,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#input tiktok urls here\n",
+        "# Input TikTok URLs here:\n",
         "reference_url = \"https://www.tiktok.com/@age20s_global/video/7495561195261365521\"\n",
         "user_url = \"https://www.tiktok.com/@age20s_global/video/7508684960207752468\"\n",
         "\n",
