--- a/Automatic_TikTok_Video_Quality_Analysis_Tool.ipynb
+++ b/Automatic_TikTok_Video_Quality_Analysis_Tool.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM9P0vox1VSygaMP15x6ktO",
+      "authorship_tag": "ABX9TyOGnMtnN1kNYFzYkNE0T4zp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "0wH6lHFdNyHR"
       },
-      "execution_count": null,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -437,6 +437,8 @@
         "    And the uploaded video description: \"{user_transcript}\"\n",
         "    Rate the uploaded video's quality from 0 to 100 based on tone, clarity, and brand consistency\n",
         "    using the reference video provided as the ideal tone/manner.\n",
+        "    Show the evaluated scoire and then give feedback as a list of points (e.g., “Lighting too dark”, “Brand name not mentioned”)\n",
+        "    Then provide a recommendation to either pass, re-shoot, or manual review the video.\n",
         "    \"\"\"\n",
         "\n",
         "    response = gemini_model.generate_content([\n",
@@ -450,7 +452,7 @@
       "metadata": {
         "id": "epdHUAUiN2He"
       },
-      "execution_count": 41,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -486,7 +488,7 @@
       "source": [
         "# Input TikTok URLs here:\n",
         "reference_url = \"https://www.tiktok.com/@age20s_global/video/7495561195261365521\"\n",
-        "user_url = \"https://www.tiktok.com/@age20s_global/video/7508684960207752468\"\n",
+        "user_url = \"https://www.tiktok.com/@age20s_global/video/7472550447769799952\"\n",
         "\n",
         "main(reference_url, user_url)"
       ],
@@ -495,9 +497,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BaU7_XFwN3O2",
-        "outputId": "5cc2e235-163a-466e-8524-4aa9b93db8d1"
+        "outputId": "aec427cf-39a9-4b04-c141-47073ff9c7f0",
+        "collapsed": true
       },
-      "execution_count": 43,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,41 +512,37 @@
             "[info] 7495561195261365521: Downloading 1 format(s): h264_540p_1081337-1\n",
             "[download] 7495561195261365521.mp4 has already been downloaded\n",
             "[download] 100% of    3.98MiB\n",
-            "[TikTok] Extracting URL: https://www.tiktok.com/@age20s_global/video/7508684960207752468\n",
-            "[TikTok] 7508684960207752468: Downloading webpage\n",
-            "[info] 7508684960207752468: Downloading 1 format(s): h264_720p_1127414-1\n",
-            "[download] 7508684960207752468.mp4 has already been downloaded\n",
-            "[download] 100% of    8.02MiB\n",
+            "[TikTok] Extracting URL: https://www.tiktok.com/@age20s_global/video/7472550447769799952\n",
+            "[TikTok] 7472550447769799952: Downloading webpage\n",
+            "[info] 7472550447769799952: Downloading 1 format(s): bytevc1_1080p_800237-1\n",
+            "[download] 7472550447769799952.mp4 has already been downloaded\n",
+            "[download] 100% of    1.03MiB\n",
             "\n",
             "Uploading Videos to Google Cloud Storage\n",
             "File 7495561195261365521.mp4 uploaded to gs://my-video-analyzer-bucket/7495561195261365521.mp4\n",
-            "File 7508684960207752468.mp4 uploaded to gs://my-video-analyzer-bucket/7508684960207752468.mp4\n",
+            "File 7472550447769799952.mp4 uploaded to gs://my-video-analyzer-bucket/7472550447769799952.mp4\n",
             "\\Transcribing Audio\n",
             "\n",
             "Calling Gemini for Analysis\n",
             "\n",
             "=== Quality Evaluation Result ===\n",
-            "Okay, I can analyze the video based on tone, clarity, and brand consistency and compare it to the reference video to provide a quality score.\n",
+            "Okay, I can evaluate the uploaded video and provide feedback based on the reference video's tone, clarity, and brand consistency.\n",
             "\n",
-            "**Analysis:**\n",
+            "**Evaluation Score: 45/100**\n",
             "\n",
-            "*   **Tone:** Both videos share an enthusiastic and friendly tone. The uploaded video demonstrates strong enthusiasm for the product.\n",
+            "**Feedback:**\n",
             "\n",
-            "*   **Clarity:** Both videos provide clear information about the sunscreen, highlighting key features such as SPF level, non-sticky texture, and lack of white cast.\n",
+            "*   **Tone:** The uploaded video doesn't have a clear tone. It appears to be a POV sketch, which doesn't match the informative/promotional tone of the reference video.\n",
+            "*   **Clarity:** The video quality is okay, but the focus is not on the product. Instead, it's on the humorous reveal.\n",
+            "*   **Brand Consistency:** The video fails to mention or showcase the product in a manner that's consistent with the reference video. It doesn't talk about benefits or features or mention the brand name.\n",
+            "*   **Product Integration:** The way the product is \"revealed\" is confusing and doesn't naturally integrate the brand into the scenario. The reveal of the latte art looks similar to the face foundation the first creator used, but it can't be concluded with the way it's set up.\n",
+            "*   **Call to Action:** There's no call to action or incentive for the viewer to learn more or purchase the product.\n",
             "\n",
-            "*   **Brand Consistency:** The uploaded video is generally consistent with the brand's message, emphasizing FDA approval and Amazon availability. However, it does add more personal anecdotes about surfing.\n",
+            "**Recommendation:**\n",
             "\n",
-            "**Quality Score:**\n",
+            "**Re-shoot.**\n",
             "\n",
-            "Considering the above factors, I would rate the uploaded video as an **85/100**.\n",
-            "\n",
-            "**Justification:**\n",
-            "\n",
-            "*   The video effectively communicates the key features of the sunscreen and aligns with the brand's messaging.\n",
-            "*   The personal anecdotes might add relatability for some viewers. However, since the reference video does not make use of anecdotes, this video's quality score is slightly decreased.\n",
-            "*   There are some minor areas for improvement regarding clarity and consistency, such as streamlining the presentation to focus more on the key selling points and aligning with the tone of the reference video.\n",
-            "\n",
-            "Overall, the video is well-executed and would likely be effective in promoting the sunscreen.\n"
+            "The video fails to align with the reference video's purpose. A re-shoot is needed to make the video more informative, promotional, and brand-consistent. The video needs to showcase the product more prominently and clearly communicate its benefits and features. Consider a testimonial review with the product or an informative tone. The use of latte art does not clearly demonstrate what the creator is hoping the viewers recognize, so a different method is needed to advertise the product.\n"
           ]
         }
       ]
